Don't move overloads from regular Python files back in resolved elements, mark them as low-priority results
(cherry picked from commit c022047)